--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Об автор</title>
+<title>Об авторе</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>Любимые цитаты</h1>
+
+<p>Неудача - это просто возможность начать снова, но уже более мудро.- Генри Форд.</p>
+
+<p>Лучшее время, чтобы посадить дерево, было двадцать лет назад. Следующее лучшее время — сегодня.</p>
+
+<h1>Коротко обо мне</h1>
+
+<h1>Увлечения</h1>
+<p></p>
+
+<h1>Текущие проекты</h1>
+
+<a href=https://dfisun.github.io/webdev-s2019>Веб-программирование</a>
 
 </body>
 </html>
