--- a/index.html
+++ b/index.html
@@ -3,18 +3,29 @@
 <head>
 <title>Об авторе</title>
 </head>
+<img src="download.png" alt="Программирование">
 <body>
 
 <h1>Любимые цитаты</h1>
 
-<p>Неудача - это просто возможность начать снова, но уже более мудро.- Генри Форд.</p>
-
-<p>Лучшее время, чтобы посадить дерево, было двадцать лет назад. Следующее лучшее время — сегодня.</p>
+<cite>Неудача - это просто возможность начать снова, но уже более мудро.- Генри Форд.</cite>
+<br>
+<br>
+<cite>Лучшее время, чтобы посадить дерево, было двадцать лет назад. Следующее лучшее время — сегодня.</cite>
 
 <h1>Коротко обо мне</h1>
 
-<h1>Увлечения</h1>
+<p>Слушаю музыку по 4 часа в день</p>
+
 <p></p>
+
+<h1>Увлечения</h1>
+
+<li>Спорт</li>
+<br>
+<li>Программирование</li>
+<br>
+<li></li>
 
 <h1>Текущие проекты</h1>
 
