--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <p>Слушаю музыку по 4 часа в день</p>
 
-<p></p>
+<p>Занимаюсь дзюдо 9 лет</p>
 
 <h1>Увлечения</h1>
 
@@ -25,7 +25,7 @@
 <br>
 <li>Программирование</li>
 <br>
-<li></li>
+<li>Конструирование</li>
 
 <h1>Текущие проекты</h1>
 
