--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <h1>Текущие проекты</h1>
 
 <a href=https://dfisun.github.io/webdev-s2019>Веб-программирование</a>
-
+<br>
+<a href="дневник разработчика">Дневник разработчика</a>
 </body>
 </html>
