--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 
 <a href=https://dfisun.github.io/webdev-s2019>Веб-программирование</a>
 <br>
-<a href="дневник разработчика">Дневник разработчика</a>
+<a href="webdev-diary.html">Дневник разработчика</a>
 </body>
 </html>
