--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
 <p>Занимаюсь дзюдо 9 лет</p>
 
 <h1>Увлечения</h1>
-
-<li>Спорт</li>
+<ol>Спорт</ol>
 <br>
-<li>Программирование</li>
+<ol>Программирование</ol>
 <br>
-<li>Конструирование</li>
+<ol>Конструирование</ol>
 
 <h1>Текущие проекты</h1>
 
 <a href=https://dfisun.github.io/webdev-s2019>Веб-программирование</a>
 <br>
-<a href="webdev-diary.html">Дневник разработчика</a>
+<a href="дневник разработчика">Дневник разработчика</a>
 </body>
 </html>
