--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <p>Занимаюсь дзюдо 9 лет</p>
 
 <h1>Увлечения</h1>
-<ol>Спорт</ol>
+<ol> <li> Спорт</li>
 <br>
-<ol>Программирование</ol>
+<li>Программирование</li>
 <br>
-<ol>Конструирование</ol>
+<li>Конструирование</li></ol>
 
 <h1>Текущие проекты</h1>
 
