--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<lang><html>
 <head>
 <title>Об авторе</title>
 </head>
-<img src="download.png" alt="Программирование">
 <body>
+<img src="download.png" alt="Программирование">
 
 <h1>Любимые цитаты</h1>
 
