--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<lang><html></lang>
+<lang><html>
 <head>
 <title>Об авторе</title>
 </head>
@@ -30,4 +30,4 @@
 <br>
 <a href="webdev-diary.html">Дневник разработчика</a>
 </body>
-</html>
+</html></lang>
