--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 <title>Об авторе</title>
+
+<style>
+
+h1, h2, h3, h3, h4, h5, h6, {text-transform: uppercase}
+
+h1 {color: crimson}
+
+body {font-family: sans-serif;
+background-image: url("bg.jpg");
+background-size: 1920px 1080px;
+}
+
+.text{margin: auto}
+
+</style>
+
 </head>
 <body>
 <img src="download.png" alt="Программирование">
+
+<div class="text">
 
 <h1>Любимые цитаты</h1>
 
@@ -13,16 +31,20 @@
 <br>
 <cite>Лучшее время, чтобы посадить дерево, было двадцать лет назад. Следующее лучшее время — сегодня.</cite>
 
+
+
 <h1>Коротко обо мне</h1>
 
 <p>Слушаю музыку по 4 часа в день</p>
 
 <p>Занимаюсь дзюдо 9 лет</p>
 
+
+
 <h1>Увлечения</h1>
 <ol> <li> Спорт</li>
 <li>Программирование</li>
-<li>Конструирование</li></ol>
+<li>Конструирование</li></ol></div>
 
 <h1>Текущие проекты</h1>
 
