--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <style>
 
-h1, h2, h3, h3, h4, h5, h6, {text-transform: uppercase}
+h1, h2, h3, h3, h4, h5, h6 {text-transform: uppercase}
 
 h1 {color: crimson}
 
