--- a/index.html
+++ b/index.html
@@ -3,20 +3,7 @@
 <head>
 <title>Об авторе</title>
 
-<style>
-
-h1, h2, h3, h3, h4, h5, h6 {text-transform: uppercase}
-
-h1 {color: crimson}
-
-body {font-family: sans-serif;
-background-image: url("bg.jpg");
-background-size: 1920px 1080px;
-}
-
-.text{margin: auto}
-
-</style>
+<link href="style.css" rel="stylesheet">
 
 </head>
 <body>
