--- a/webdev-diary.html
+++ b/webdev-diary.html
@@ -2,6 +2,10 @@
 <html lang="ru">
 <head>
 <title>Дневник разработчика</title>
+  
+<link href="style.css" rel="stylesheet">
+
+  
 </head>
 <body>
 
