--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 
 <a href=https://dfisun.github.io/webdev-s2019>Веб-программирование</a>
 <br>
-<a href="webdev-diary.html">Дневник разработчика</a>
+<a href="webdev-diary.html">Дневник разработчика</a></div>
 </body>
 </html>
