--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h1>Увлечения</h1>
 <ol> <li> Спорт</li>
 <li>Программирование</li>
-<li>Конструирование</li></ol></div>
+<li>Конструирование</li></ol>
 
 <h1>Текущие проекты</h1>
 
