--- a/webdev-diary.html
+++ b/webdev-diary.html
@@ -8,6 +8,8 @@
   
 </head>
 <body>
+  
+<div class="text">
 
 <h1>План действий</h1>
 
@@ -19,7 +21,7 @@
 <br>
 <a href="http://validator.w3.org/">http://validator.w3.org/</a>
 <br>
-<a href="https://htmlreference.io/">https://htmlreference.io/</a>
+  <a href="https://htmlreference.io/">https://htmlreference.io/</a></div>
 
 </body>
 </html>
