--- a/webdev-diary.html
+++ b/webdev-diary.html
@@ -13,15 +13,28 @@
 
 <h1>План действий</h1>
 
-<h1>Лабораторная 1. HTML и поиск</h1>
+<h2>Лабораторная 1. HTML и поиск</h2>
 
-<h2>Полезные ссылки</h2>
+<h3>Полезные ссылки</h3>
 
 <a href="https://www.w3schools.com/tags/">https://www.w3schools.com/tags/</a>
 <br>
 <a href="http://validator.w3.org/">http://validator.w3.org/</a>
 <br>
-  <a href="https://htmlreference.io/">https://htmlreference.io/</a></div>
+<a href="https://htmlreference.io/">https://htmlreference.io/</a>
+<br>
+
+  
+<h2>Лабораторная 2. CSS</h2>  
+  
+<h3>Полезные ссылки</h3>
+
+<a href="https://www.w3schools.com/tags/">https://www.w3schools.com/tags/</a>
+<br>
+<a href="https://fonts.google.com/">https://fonts.google.com/</a>
+<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/q">https://developer.mozilla.org/en-US/docs/Web/HTML/Element/q</a>
+  
+</div>
 
 </body>
 </html>
